
2009-12-03
	* libstruct/config.c: bug fixed in function 'trim'. Tabs were not
		deleted at the beginning and end of strings.
	* libstruct/cachesystem.c: TLB section set as optional in cache
		configuration file.

2009-12-09
	* libm2skernel/elf.c: bug fixed. There was a segmentation fault
		when a non-existing executable file was tried to be
		loaded.

2009-12-17
	* tcache.c, processor.c: stats 'committed', 'squashed', 'accesses',
		'hits', and 'hitratio' for trace cache.
	* tcache.c: Change uop_max for trace_size.
		Function tcache_commit_trace changed to tcache_flush_trace.
		Stat 'tcache.trace_length' added, indicating the average trace
		length (depends on max branches and uops alignment).

2009-12-18
	* libmhandle/mhandle.c: list storing freed pointers removed. This
		caused used memory to grown indefinitely when pointers
		were constantly allocated and deallocated.
	* processor.c, m2s.c: processor stats dumped into debug:error file
		after SIGABRT received.

2009-12-22
	* libmhandle: memory overhead of libmhandle is too high to make it by
		default. DMHANDLE directive is removed in Makefile.am.
	* memory.c: global variable mem_mapped_space.
	* processor.c: stat sim.memory changes meaning.

2009-12-31
	* libstruct/repos.c: implementation improved to provide function
		repos_free_dump to dump objects not freed.

2010-01-04
	* libm2skernel/syscall.c: system call fcntl64 with cmd=3 (F_GETFL)
		implemented.
	* libm2skernel/syscall.c: system call 'utime' implemented.
	* libm2skernel/syscall.c: system call 'chmod' implemented.
	* libm2skernel/syscall.c: system call 'chown' implemented.

2010-01-05
	* libm2skernel/m2skernel.h: global variable 'mem_max_mapped_space',
		representing the maximum allocated physical memory for
		benchmarks.
	* m2s-fast.c: stat names changed. Stat 'sim.memory' and
		'sim.memory_max' added.
	* processor.c: stats 'sim.memory' and 'sim.memory_max' added.

2010-01-06
	* m2s-cache, m2s-bpred, m2s-network: removed.