@@ -169,10 +169,16 @@ static int issue_iq(int core, int thread, int quant)
 }
 
 
-static int issue_thread(int core, int thread, int quant)
+static int issue_thread_iq(int core, int thread, int quant)
 {
 	quant = issue_sq(core, thread, quant);
 	quant = issue_lq(core, thread, quant);
+	return quant;
+}
+
+
+static int issue_thread_lsq(int core, int thread, int quant)
+{
 	quant = issue_iq(core, thread, quant);
 	return quant;
 }
@@ -180,23 +186,48 @@ static int issue_thread(int core, int thread, int quant)
 
 void issue_core(int core)
 {
-	int skip = p_threads;
-	int quant = p_issue_width;
+	int skip, quant;
 
 	switch (p_issue_kind) {
 	
 	case p_issue_kind_shared:
+		
+		/* Issue IQs */
+		quant = p_issue_width;
+		skip = p_threads;
 		do {
 			CORE.issue_current = (CORE.issue_current + 1) % p_threads;
-			quant = issue_thread(core, CORE.issue_current, quant);
+			quant = issue_thread_iq(core, CORE.issue_current, quant);
+			skip--;
+		} while (skip && quant);
+
+		/* Issue LSQs */
+		quant = p_issue_width;
+		skip = p_threads;
+		do {
+			CORE.issue_current = (CORE.issue_current + 1) % p_threads;
+			quant = issue_thread_lsq(core, CORE.issue_current, quant);
 			skip--;
 		} while (skip && quant);
 		break;
 	
 	case p_issue_kind_timeslice:
+		
+		/* Issue IQs */
+		quant = p_issue_width;
+		skip = p_threads;
 		do {
 			CORE.issue_current = (CORE.issue_current + 1) % p_threads;
-			quant = issue_thread(core, CORE.issue_current, quant);
+			quant = issue_thread_iq(core, CORE.issue_current, quant);
+			skip--;
+		} while (skip && quant == p_issue_width);
+
+		/* Issue LSQs */
+		quant = p_issue_width;
+		skip = p_threads;
+		do {
+			CORE.issue_current = (CORE.issue_current + 1) % p_threads;
+			quant = issue_thread_lsq(core, CORE.issue_current, quant);
 			skip--;
 		} while (skip && quant == p_issue_width);
 		break;
